Pom fix